# AgentDeck

./: .gitignore  LICENSE  README.md  install.sh  pyproject.toml  test.sh
src/agentdeck/: __init__.py  __main__.py  cli.py
src/agentdeck/adapters/: __init__.py  base.py  capabilities.py  codex_exec.py  echo.py  errors.py  kimi_print.py
src/agentdeck/core/: __init__.py  approvals.py  cancel.py  config.py  error_daemon.py  events.py  experience_organizer.py  run_service.py  runtime.py
src/agentdeck/interfaces/: __init__.py  telegram.py  web.py
src/agentdeck/storage/: __init__.py  admin.py  agents.py  approvals.py  clones.py  directories.py  errors.py  event_log.py  experience.py  focus.py  jobs.py  memory.py  plans.py  progress.py  project_state.py  projects.py  provider_cleanup.py  provider_sessions.py  session_state.py  sessions.py  tasks.py  telegram_bots.py
tests/: test_adapter_capabilities_errors.py  test_adapter_event_fixtures.py  test_admin_mutations.py  test_agent_registry.py  test_approval_registry.py  test_clone_capsules.py  test_codex_exec_adapter.py  test_core.py  test_error_handler.py  test_experience.py  test_experience_organizer.py  test_kimi_print_adapter.py  test_plan_registry.py  test_project_task_board.py  test_provider_cleanup.py  test_runtime.py  test_session_registry.py  test_telegram_interface.py  test_web_interface.py
tests/fixtures/provider_events/: codex_exec.jsonl  kimi_stream.txt
tools/: git-credential-helper.sh
